chnge meta description

--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/logo.svg" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="description" content="%sveltekit.description%" />
+		<meta name="description" content="Dylan Dupasquier's portfolio. Let's make some magic happen!" />
 		<title>dupasquier.dev</title>
 		%sveltekit.head%
 	</head>
