--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/logo.svg" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- <meta 
+		<meta name="viewport" content="width=device-width" /> -->
+		<meta property="og:title" content="Dylan Dupasquier's Portfolio" />
+		<meta property="og:type" content="Portfolio" />
+		<meta property="og:url" content="https://www.dylandupasquier.dev" />
+		<meta property="og:image" content="%sveltekit.assets%/portfoio-metapreview-image.webp" />
 		<meta name="description" content="Dylan Dupasquier's portfolio. Let's make some magic happen!" />
 		<title>dupasquier.dev</title>
 		%sveltekit.head%
