improve meta description

--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,10 @@
 		<meta property="og:type" content="Portfolio" />
 		<meta property="og:url" content="https://www.dylandupasquier.dev" />
 		<meta property="og:image" content="%sveltekit.assets%/portfoio-metapreview-image.webp" />
-		<meta name="description" content="Dylan Dupasquier's portfolio. Let's make some magic happen!" />
+		<meta
+			name="description"
+			content="Dylan Dupasquier's portfolio. This is where I display work that I'm proud of. I'm always open to new opportunities, so don't hesitate to contact me. Let's make some magic happen!"
+		/>
 		<title>dupasquier.dev</title>
 		%sveltekit.head%
 	</head>
