--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,10 @@
 			name="description"
 			content="Dylan Dupasquier's portfolio. This is where I display work that I'm proud of. I'm always open to new opportunities, so don't hesitate to contact me. Let's make some magic happen!"
 		/>
+		<meta
+			property="og:description"
+			content="Dylan Dupasquier's portfolio. This is where I display work that I'm proud of. I'm always open to new opportunities, so don't hesitate to contact me. Let's make some magic happen!"
+		/>
 		<title>dupasquier.dev</title>
 		%sveltekit.head%
 	</head>
