--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<!-- <meta 
 		<meta name="viewport" content="width=device-width" /> -->
 		<meta property="og:title" content="Dylan Dupasquier's Portfolio" />
-		<meta property="og:author" content="Dylan Dupasquier" />
+		<meta property="author" content="Dylan Dupasquier" />
 		<meta property="og:author" content="Dylan Dupasquier" />
 		<meta property="og:type" content="portfolio" />
 		<meta property="og:url" content="https://www.dylandupasquier.dev" />
