--- a/src/app.html
+++ b/src/app.html
@@ -5,11 +5,8 @@
 		<link rel="icon" href="%sveltekit.assets%/logo.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta property="og:title" content="Dylan Dupasquier's Portfolio" />
-		<meta property="author" content="Dylan Dupasquier" />
-		<meta property="og:author" content="Dylan Dupasquier" />
-		<meta property="og:type" content="portfolio" />
 		<meta property="og:url" content="https://www.dylandupasquier.dev" />
-		<meta property="og:image" content="src/lib/assets/portfolio-metapreview-image.webp" />
+		<meta name="image" content="src/lib/assets/portfolio-metapreview-image.webp" />
 		<meta
 			property="og:description"
 			content="Dylan Dupasquier's portfolio. This is where I display work that I'm proud of. I'm always open to new opportunities, so don't hesitate to contact me. Let's make some magic happen!"
