try diff scale image

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/logo.svg" />
-		<meta name="viewport" content="width=device-width" />
+		<!-- <meta name="viewport" content="width=device-width" /> -->
+		<meta name="viewport" content="initial-scale=1" />
 		<meta property="og:title" content="Dylan Dupasquier's Portfolio" />
 		<meta property="og:url" content="https://www.dylandupasquier.dev" />
 		<meta name="image" property="og:image" content="%sveltekit.assets%/portfolio-metapreview-image.webp" />
